welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: type mismatch;
 found   : Unit
 required: Int
  if ((max < 10 || max > 20) && (min < 10 || min > 20)) {
  ^