welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  var max:Int = Math.max(a, b)
  var min:Int = Math.min(a, b)
  
  if ((max < 10 || max > 20) && (min < 10 || min > 20)) {
    return 0
  }
}